# bimchimp

./: .gitignore  pyproject.toml
backend/: docker-compose.yml
backend/db/: schema.sql
backend/php/: .gitignore  Dockerfile  cache.php  composer.json  extra.ini  runPhp.bat  transformed_peikko_products.json
backend/php/public/: index.php
beamer/: Dockerfile  app.py  beamer.py  pyproject.toml  requirements.txt
beamer/ifc-parser/: ifc-test-2.ipynb
client/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
client/public/: c.wexBIM
client/src/: App.tsx  index.css  main.tsx
client/src/app/: page.tsx
client/src/components/: InputFile.tsx  ProductUpdateThing.tsx  Providers.tsx  SideBar.tsx  Spinner.tsx  XbimViewer.tsx  file_as_base64.txt
client/src/components/contexts/: files.tsx  pubsub.tsx
client/src/components/ui/: input.tsx  sidebar.tsx
client/src/lib/: api.ts  types.ts  utils.ts
client/src/xbim/: XbimViewer.tsx
data/: DummyModel.ifc  DummyModelFixed_collided.ifc  Dummy_Detailed_Fixed.enc.json  Dummy_Detailed_Fixed.ifc  One_Section.dec.ifc  One_Section.enc.json  b642ifc.py  clash_analysis.json  from_docker.json  ifc2b64.py  piped-test.dec.ifc  piped-test.json  skript.py
