[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "bimchimp"
version = "0.0.1"
readme = "README.md"
requires-python = "==3.11.4"
authors = [{name = "chimp optimus"}]
classifiers = ["Programming Langauge :: Python :: 3"]
dependencies = [
    "click",
    "fastapi",
    "flask",
    "gunicorn",
    "pydantic",
    "pydantic-settings",
    "uvicorn",
    "pandas",
    "numpy",
    "matplotlib",
    "ifcopenshell",
    "jupyterlab"
]

[tool.setuptools.packages.find]
include = ["beamer"]
